Advanced text editor misc fixes (#29676)
* removed extra space

* Fixed border of edit box in mobile view

* Fixed test

--- a/webapp/channels/src/components/advanced_text_editor/advanced_text_editor.scss
+++ b/webapp/channels/src/components/advanced_text_editor/advanced_text_editor.scss
@@ -202,27 +202,29 @@
 }
 
 @media screen and (max-width: 768px) {
-    .AdvancedTextEditor {
-        padding: 0;
+    #post-create {
+        .AdvancedTextEditor {
+            padding: 0;
 
-        &__body {
-            border-radius: 0;
-            border-right: none;
-            border-left: none;
-
-            &:focus-visible,
-            &:focus-within,
-            &:focus-visible:hover,
-            &:focus-within:hover,
-            &:hover {
+            &__body {
+                border-radius: 0;
                 border-right: none;
                 border-left: none;
-            }
-        }
 
-        .ThreadViewer & {
-            .msg-typing:empty {
-                display: none;
+                &:focus-visible,
+                &:focus-within,
+                &:focus-visible:hover,
+                &:focus-within:hover,
+                &:hover {
+                    border-right: none;
+                    border-left: none;
+                }
+            }
+
+            .ThreadViewer & {
+                .msg-typing:empty {
+                    display: none;
+                }
             }
         }
     }
